Fix index images on mobile devices

--- a/css/custom.css
+++ b/css/custom.css
@@ -2420,7 +2420,7 @@ body::-webkit-scrollbar-thumb:hover {
 
 @media only screen and (max-width: 767px) {
 	.wide-screen {
-		display: none;
+		display: none !important;
 	}
 	.narrow-screen {
 		display: block;
